[tool.poetry]
name = "linear-terminal-clock"
version = "0.1.0"
description = ""
authors = ["Peter Henry <me@peterhenry.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
blessed = "^1.20.0"
skyfield = "^1.48"
tzlocal = "^5.2"
memoization = "^0.4.0"
structlog = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
