[tool.poetry]
name = "linear-terminal-clock"
version = "0.1.0"
description = "Abstract terminal clock anchored to the sun"
authors = ["Peter Henry <me@peterhenry.net>"]
readme = "README.md"
homepage = "https://github.com/mosbasik/linear-terminal-clock"
repository = "https://github.com/mosbasik/linear-terminal-clock"

[tool.poetry.dependencies]
python = "^3.9"
blessed = "^1.20.0"
skyfield = "^1.46"
tzlocal = "^5.0.1"
memoization = "^0.4.0"
spans = "^1.1.1"
structlog = "^24.1.0"

[tool.poetry.scripts]
linear-terminal-clock = "linear_terminal_clock.clock:main"
linear-terminal-clock-simulate-time = "linear_terminal_clock.clock:simulate_time"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
